Adjust generated code to 3.5-inch Riverdi display

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TESTNUCLEO2</name>
+	<name>riverdi-nucleo-3-50</name>
 	<comment></comment>
 	<projects>
 	</projects>
